# Waffle

./: .gitignore  LICENSE  README.md  _config.yml  index.md
_includes/: youtube.html
_layouts/: default.html
assets/css/: style.scss
source_codes/Waffle/: .gitignore  CMakeLists.txt  README.md  main.cpp
source_codes/Waffle/include/: CMakeLists.txt  Chunk.cpp  Chunk.h  GridIndexManager.cpp  GridIndexManager.h  LockManager.cpp  LockManager.h  Parameters.h  RegridManager.cpp  RegridManager.h  TransactionManager.cpp  TransactionManager.h  Waffle.cpp  Waffle.h  WaffleIndexManager.cpp  WaffleIndexManager.h  json.hpp  utils.h
source_codes/Waffle/include/WaffleMaker/: CMakeLists.txt  WaffleMaker.cpp  WaffleMaker.h  model.cpp  model.h  utils.cpp  utils.h
source_codes/Waffle/include/interface/: CMakeLists.txt  InterfaceResource.cpp  InterfaceResource.h  InterfaceService.cpp  InterfaceService.h  InterfaceServiceSettings.cpp  InterfaceServiceSettings.h
source_codes/Waffle/test/: unitTestMain.cpp  unitTestWaffleIndexManager.h
source_codes/Waffle_dataset/: CMakeLists.txt  README.md  main.cpp  parameters.h  utils.h  visualizeObjects.py
source_codes/Waffle_interface/: README.md  package-lock.json  package.json
source_codes/Waffle_interface/public/: index.html  manifest.json
source_codes/Waffle_interface/src/: AdditionalInfo.js  App.css  App.js  Convergence.js  CurrentKnobSetting.js  GraphWrapper.js  HyperParameters.js  SingleGraph.js  UserParameters.js  Waffle.js  WaffleApi.js  index.css  index.js  logo.js
